# e2

./: .gitattribute  .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
core/: core.rs
core/asset/images/: texture4.xcf
core/example/: example_kernel_impl001.rs
core/implement/: mod.rs
core/implement/cam/: camguide.rs  mod.rs  trackball.rs
core/implement/file/: md5anim.rs  md5anim_nom.rs  md5comp.rs  md5mesh.rs  md5mesh_nom.rs  md5rig.rs  mod.rs  wavefrontcomp.rs  wavefrontobj.rs
core/implement/kernel/: kernel_impl_001.rs
core/implement/logic/: game0.rs
core/implement/math/: frustum.rs  linearinterp.rs  mod.rs  spline_bezier.rs  util.rs
core/implement/render/: camera.rs  light.rs  mesh.rs  primitive.rs  renderdevice_gl.rs  renderer_gl.rs
core/implement/step/: mod.rs  step_interpolate.rs
core/implement/ui/: input_default_glutin.rs  mod.rs  ui_cam.rs
core/implement/window/: winglutin.rs
core/interface/: i_ads.rs  i_file.rs  i_game_logic.rs  i_kernel.rs  i_md5.rs  i_renderer.rs  i_renderobj.rs  i_step.rs  i_ui.rs  i_wavefront.rs  i_wavefrontobj.rs  i_waypoint.rs  i_window.rs  mod.rs
core/test/: mod.rs
core/test/file/: mod.rs  test_md5anim_nom.rs  test_md5comp.rs  test_md5comp_nom.rs  test_md5mesh.rs  test_md5mesh_nom.rs  test_md5rig.rs  test_md5rig_nom.rs  test_wavefrontcomp.rs  test_wavefrontobj.rs
core/test/math/: mod.rs  test_interpolate.rs  test_linearinterp.rs  test_spline_bezier.rs  test_util.rs
games/: mod.rs  n_of_a_kind.rs
games/model_viewer/: main.rs  mod.rs
games/n_of_a_kind/: main.rs
(+2 files in other folders)
